dox/dev_guides/upgrade/upgrade.md
@@ -1240,7 +1240,8 @@ The following Grid management methods within class V3d_Viewer do not implicitly 
 * Types GeomPlate_Array1OfHCurveOnSurface and GeomPlate_HArray1OfHCurveOnSurface have been replaced with GeomPlate_Array1OfHCurve and GeomPlate_HArray1OfHCurve correspondingly (accept base class Adaptor3d_HCurve instead of Adaptor3d_HCurveOnSurface).
 * Enumeration *Image_PixMap::ImgFormat*, previously declared as nested enumeration within class *Image_PixMap*, has been moved to global namespace as *Image_Format* following OCCT coding rules.
   The enumeration values have suffix Image_Format_ and preserve previous name scheme for easy renaming of old values - e.g. Image_PixMap::ImgGray become Image_Format_Gray.
-  Old definitions are preserved as depreacated aliases to the new ones.
+  Old definitions are preserved as depreacated aliases to the new ones;
+* The method BOPAlgo_Builder::Origins() returns BOPCol_DataMapOfShapeListOfShape instead of BOPCol_DataMapOfShapeShape.
 
 @subsection upgrade_720_BOP_DataStructure BOP - Pairs of interfering indices
 
